# ai.pdf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: compression-analysis.md
crates/aipdf/: Cargo.toml
crates/aipdf-cli/: Cargo.toml
crates/aipdf/assets/: FONT-LICENSE.md
crates/aipdf/src/: browser.rs  font.rs  ingest.rs  lib.rs  markdown.rs  onto.rs  pdf.rs  render.rs  security.rs  source.rs  xml.rs
crates/aipdf/src/font/: dicts.rs  mod.rs
crates/aipdf/src/ingest/: extract.rs  mod.rs
crates/aipdf/src/markdown/: ast.rs  ast_nodes.rs  mod.rs  render.rs
crates/aipdf/src/onto/: build.rs  encode.rs  mod.rs  render_onto.rs
crates/aipdf/src/pdf/: detect.rs  images.rs  meta.rs  mod.rs  write.rs  xobject.rs
crates/aipdf/src/render/: assemble.rs  build.rs  image.rs  layout.rs  layout_blocks.rs  mod.rs  options.rs  parse.rs
crates/aipdf/src/source/: html.rs  html_walk.rs  markdown.rs  mod.rs  typst.rs
crates/aipdf/tests/: browser.rs  conformance.rs  coordinates.rs  figure_image.rs  ingest.rs  roundtrip.rs  security_fuzz.rs  unicode_render.rs
docs/: compatibility.md  mcp.md  security.md  semantic-stream-example.xml  spec.md
docs/diagrams/: architecture.md
examples/: extract_demo.py
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
samples/: maximal.xml  minimal.xml
samples/demo/: index.html
samples/html/: aipdf.css  (+1 more)
schema/: aipdf-1.0.xsd
sdk/python/: README.md  pyproject.toml
sdk/python/aipdf/: __init__.py  _ast.py  _markdown.py  _mcp_tools.py  _models.py  _onto.py  _pdf.py  _source.py  _source_html.py  cli.py  core.py  mcp_server.py
tests/: build_sample.mjs  conformance_python.py  mcp_smoke.py  python_smoke.py
(+25 files in other folders)
