[workspace]
members = [
  "crates/aipdf",
  "crates/aipdf-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aipdf/aipdf"
homepage = "https://github.com/aipdf/aipdf"
description = "Minimal AI-native semantic PDF extension prototype"

