[package]
name = "aipdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for minimal semantic .aipdf files"

[dependencies]
brotli = "7"
flate2 = "1.1.9"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
lopdf = "0.40.0"
pulldown-cmark = "0.13.4"
quick-xml = "0.37"
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
ttf-parser = "0.25.1"

[dev-dependencies]
lopdf = "0.40.0"
