[package]
name = "aipdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for minimal semantic .aipdf files"

[dependencies]
brotli = "7"
quick-xml = "0.37"
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
