[project]
name = "aipdf"
version = "0.1.0"
description = "Python SDK for minimal semantic .aipdf files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["brotli>=1.1.0"]
license = { text = "Apache-2.0" }

[project.scripts]
# MCP stdio server exposing .ai.pdf tools to agents.
aipdf-mcp = "aipdf.mcp_server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

